--- a/builds/backend-build/nixpacks.toml
+++ b/builds/backend-build/nixpacks.toml
@@ -1,11 +1,11 @@
 [phases.setup]
-nixPkgs = ['nodejs-18_x', 'npm-9_x']
+nixPkgs = ['nodejs_20', 'npm-10_x']
 
 [phases.install]
-cmds = ['npm ci --production']
+cmds = ['npm ci --production --legacy-peer-deps']
 
 [phases.build]
-cmds = ['npm run build']
+cmds = ['echo "Build already completed"']
 
 [start]
 cmd = 'npm run start:prod'
